--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 body
 {
     margin: 0;
+    font-family: 'montserrat';
 }
 
 #mainContainer
@@ -15,13 +26,72 @@ body
 {
     background-color: yellow;
     grid-column: 2;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+#navbar .section
+{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+#navbar .section.one
+{
+    padding: 20px 40px;
+}
+
+#navbar .section.one #search input[type="search"]
+{
+    padding: 5px;
+    height: 30px;
+    width: 500px;
+    border: none;
+    border-radius: 15px;
+}
+
+#navbar .section.one #user 
+{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+#navbar .section.one #user #userName
+{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 
 #sidebar
 {
-    background-color: blue;
+    background-color: #a78bfa;
     grid-column: 1;
     grid-row: 1 / span 2;
+    color: rgb(255, 255, 255);
+    padding: 0 15px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr) 3fr;
+}
+
+#sidebar ul
+{
+    list-style: none;
+}
+
+#sidebar ul li
+{
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: -40px;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+#sidebar ul li .material-symbols-outlined
+{
+    font-size: 26px;
 }
 
 #container
@@ -30,3 +100,4 @@ body
     grid-column: 2;
     grid-row: 2;
 }
+
